-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 11.0.3
-
None
-
-
2ad3520e5 (12.0)
When I change an objects name, an error window pops up:
_____________________________________________________________________
File Without Write Permissions - QT Creator
The following files have no write permissions. Do you want to change the permissions?
Filename: ui_mainwindow.h Path: (my project path)
-----------------------------------------------------------------------
When I click the button 'Change Permission', I get this window:
____________________________________________________________________
Cannot Set Permissions - QT Creator
Cannot set permissions for (path) to writable. Aborting replace.
-----------------------------------------------------------------------
I have uploaded images of the message windows.
Also, as far as I can tell, the file 'ui_mainwindow.h' does not exist.
- is duplicated by
-
QTCREATORBUG-29551 Qt creator shows message: "The following files have no write permissions" in file ui_<classdlg>.h"
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-29778 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
513986,2 | CppEditor/LanguageClient: Do not rename in generated files by default | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |