CppEditor/LanguageClient: Do not rename in generated files by default

Fixes: QTCREATORBUG-29778
Change-Id: I4e56b6bda4e22c71995ab19ac6469ea88d22ee11
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>